<?xml version="1.0"?>
<package format="2">

   <name>amcl3d</name>
   <version>1.0.0</version>
   <description>
      <p>
         Adaptive Monte Carlo Localization (AMCL) in 3D.
      </p>
      <p>
         amcl3d is a probabilistic algorithm to localizate a robot moving in 3D.
         It uses Monte-Carlo Localization, i.e. a particle filter. 
         This package use a laser sensor and radio-range sensors to localizate a UAV within a known map.
      </p>
   </description>
   <url>http://wiki.ros.org/amcl3d</url>
   <author email="fjperez@catec.aero">Francisco J.Perez-Grau </author>
   <maintainer email="fcuesta@catec.aero">Francisco Cuesta Rodriguez </maintainer>
   <maintainer email="pcarrasco@catec.aero"> Paloma Carrasco Fernandez </maintainer>
   <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>

   <depend>visualization_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>octomap_ros</depend>
   <depend>pcl_ros</depend>
   <depend>rosinrange_msg</depend>

</package>
